# mathparser

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  Doxyfile.in  README.md
contrib/: CMakeLists.txt
contrib/gmock/: CMakeLists.txt
contrib/gtest/: CMakeLists.txt
example/: CMakeLists.txt  main.cxx
mathparser/: CMakeLists.txt  exception.cxx
mathparser/mathparser/: backtracker.hxx  config.hxx.in  exception.hxx  intparser.hxx  optional.hxx
tests/: CMakeLists.txt  backtracker.cxx  exception.cxx  intparser.cxx  main.cxx  optional.cxx
